...
class TwitterSearchViewController: UIViewController {
    private var twitterProfiles: [TwitterProfileModel] = []
    private lazy var dataSource = initDataSource()
    typealias Snapshot = NSDiffableDataSourceSnapshot<Section, TwitterProfileModel>

    private lazy var searchBarController = UISearchController().configured {
        $0.searchBar.placeholder = "search for twitter handle"
        $0.searchBar.accessibilityTraits = .searchField
        $0.searchBar.searchBarStyle = .minimal
        $0.searchBar.backgroundColor = .systemBackground

        // dynamic text sizing per settings
        $0.searchBar.searchTextField.adjustsFontForContentSizeCategory = true
...

        // accessibility enable clear button tap
        $0.obscuresBackgroundDuringPresentation = false
    }

    private lazy var searchTableView = UITableView().configured {
        $0.register(UITableViewCell.self, forCellReuseIdentifier: "twitter")
        $0.backgroundView = UIView().configured { backgroundView in
            backgroundView.backgroundColor = .systemBackground
        }
    }

    override func viewDidLoad() {
...
